--- a/index.html
+++ b/index.html
@@ -1,5 +1,185 @@
+<!--?xml version="1.0" encoding="UTF-8"?--><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<body>
-<h1>Hello World!</h1>
-</body>
+ <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, 
+minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="exporter-version" content="Evernote Mac 7.2.1 (456793)" />
+  <meta name="altitude" content="38.00122451782227" />
+  <meta name="author" content="xiaohangfamily@163.com" />
+  <meta name="created" content="2020-08-23 00:44:49 +0000" />
+  <meta name="latitude" content="22.94113159179688" />
+  <meta name="longitude" content="113.89009078641" />
+  <meta name="source" content="desktop.mac" />
+  <meta name="updated" content="2020-08-23 02:24:34 +0000" />
+  <title>index</title>
+ </head>
+ <body>
+  <div>
+   <font style="font-size: 24px;"><span style="font-size: 24px; font-weight: bold;"><a href="http://note.youdao.com/noteshare?id=00c3d8bd6210b560cb171807307b4fc6" style="font-size: 24px; font-weight: bold;">隐私政策</a> |&nbsp;</span></font>
+   <span style="font-size: 24px;"><a href="http://note.youdao.com/noteshare?id=f7617bdf6549adc58ef0a973d65b913b" style="font-size: 24px; font-weight: bold;">服务条款</a></span>
+  </div>
+  <div>
+   <br />
+  </div>
+  <div>
+   <font style="font-size: 24px;"><span style="font-size: 24px; font-weight: bold;">IAP购买常见问题</span></font>
+  </div>
+  <div>
+   <font style="font-size: 18px;"><span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;;">A.&nbsp;已经扣款成功</span></font>
+  </div>
+  <ol>
+   <li>
+    <div>
+     <font style="font-size: 18px;"><span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;">尝试进行【恢复购买】操作，确保网络连接正常</span></font>
+    </div></li>
+   <li>
+    <div>
+     <font style="font-size: 18px;"><span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;">重启应用，进行【恢复购买】操作</span></font>
+    </div></li>
+   <li>
+    <div>
+     <font style="font-size: 18px;"><span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;">重启手机，进行【恢复购买】操作</span></font>
+    </div></li>
+   <li>
+    <div>
+     <font style="font-size: 18px;"><span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;">卸载应用，重新下载，并使用【恢复购买】操作</span></font>
+    </div></li>
+   <li>
+    <div>
+     <font style="font-size: 18px;"><span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;">确保手机已经允许【App内程序购买】，在设置中，搜索【限制】，打开【访问限制】，找到【App内程序购买】开关，并【打开】，返回程序再次发起【恢复购买】操作</span></font>
+    </div></li>
+   <li>
+    <div>
+     <font style="font-size: 18px;"><span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;"></span></font>
+     <span style="font-family: &quot;Helvetica Neue&quot;; font-size: 18px;">确保下载应用的Apple账号和当时购买的账号是一致的，否则恢复购买失败</span>
+    </div></li>
+   <li>
+    <div>
+     <span style="font-family: &quot;Helvetica Neue&quot;; font-size: 18px;">检查手机是否越狱或者beta系统版本导致功能不稳定（此问题再联系开发者进行详细描述）</span>
+    </div></li>
+  </ol>
+  <div>
+   <span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;"></span>
+  </div>
+  <div>
+   <span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;"> B. 未扣款成功 </span>
+  </div>
+  <ol>
+   <li>
+    <div>
+     <font style="font-size: 18px;"><span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;">确保是否打开网络访问以及网络是否正常</span></font>
+    </div></li>
+   <li>
+    <div>
+     <font style="font-size: 18px;"><span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;"></span></font>
+     <span style="font-family: &quot;Helvetica Neue&quot;; font-size: 18px;">重启应用，再次进行购买操作</span>
+    </div></li>
+   <li>
+    <div>
+     <span style="font-family: &quot;Helvetica Neue&quot;; font-size: 18px;">重启手机，再次进行购买操作</span>
+    </div></li>
+   <li>
+    <div>
+     <span style="font-family: &quot;Helvetica Neue&quot;; font-size: 18px;">卸载应用，重新发起购买操作</span>
+    </div></li>
+   <li>
+    <div>
+     <span style="font-family: &quot;Helvetica Neue&quot;; font-size: 18px;">确保手机已经允许【App内程序购买】，在设置中，搜索【限制】，打开【访问限制】，找到【App内程序购买】开关，并【打开】，返回程序再次发起【恢复购买】操作</span>
+    </div></li>
+  </ol>
+  <div>
+   <span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;;"><br /></span>
+  </div>
+  <div>
+   <span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;"></span>
+  </div>
+  <div>
+   <span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;"> 国行手机网络开关设置： </span>
+  </div>
+  <div>
+   <span style="font-size: 18px; font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-style: normal; font-variant-caps: normal; font-weight: normal; line-height: normal;"> 打开设置 》无线局域网 》 使用无线局域网与蜂窝移动的应用 》 找到该应用 》 选择无线局域网与蜂窝移动数据，重启应用 </span>
+  </div>
+  <div>
+   <br />
+  </div>
+  <div>
+   <font style="font-size: 24px;"><b>如何取消自动订阅？</b></font>
+  </div>
+  <ol>
+   <li>
+    <div>
+     <font style="font-size: 18px;">打开系统应用「设置」，找到「iTunes Store与AppStore」选项，点击</font>
+    </div></li>
+   <li>
+    <div>
+     <font style="font-size: 18px;">点击「Apple ID：xxxx.com」选项，查看Apple ID，进入「账户设置」界面</font>
+    </div></li>
+   <li>
+    <div>
+     <font style="font-size: 18px;">点击「订阅」，找到订阅中的应用，点击应用</font>
+    </div></li>
+   <li>
+    <div>
+     <font style="font-size: 18px;">把已勾选的订阅项目取消掉，没有打钩状态即已取消订阅</font>
+    </div></li>
+  </ol>
+  <div>
+   <br />
+  </div>
+  <div>
+   <font style="font-size: 24px;"><b>如何进行退款操作？</b></font>
+  </div>
+  <div>
+   <span style="font-size: 18px;">用户购买应用付费内容交易流程</span>
+  </div>
+  <div>
+   <span style="font-size: 18px;">1、用户在手机上确认购买项目》指纹/脸部识别，确认要购买》购买成功，App Store扣款</span>
+  </div>
+  <div>
+   <span style="font-size: 18px;">这里付费是需要经过用户的“指纹/脸部识别”，并确认的，才会扣款成功，当你使用指纹/脸部识别，已代表你了解该付费内容</span>
+  </div>
+  <div>
+   <span style="font-size: 18px;">2、App Store统计所有用户付费项目，一个月之后对开发者进行结算，哪些退款，哪些付款成功，最后打款</span>
+  </div>
+  <div>
+   <span style="font-size: 18px;">所有开发者是看不到具体是谁买了什么，是哪个账号买了东西，更不知道你的付费账单流水清单</span>
+  </div>
+  <div>
+   <span style="font-size: 18px;">3、App Store算是用户和开发者的一个中介，它负责所有的交易流程，如果用户有退款，苹果是直接扣开发者的钱</span>
+  </div>
+  <div>
+   <span style="font-size: 18px;"><br /></span>
+  </div>
+  <div>
+   <span style="font-size: 18px;">所有的交易都经过App Store平台完成</span>
+  </div>
+  <div>
+   <span style="font-size: 18px;">开发者个人不负责直接的退款操作，请勿私信开发者要求直接退款</span>
+  </div>
+  <div>
+   <font style="font-size: 18px;"><br /></font>
+  </div>
+  <div>
+   <font style="font-size: 18px;">具体操作参考网上教程：<a href="https://zhuanlan.zhihu.com/p/25825319?utm_medium=social&amp;utm_source=weibo" style="color: rgb(220, 161, 13); font-family: &quot;Helvetica Neue&quot;; font-stretch: normal; font-variant-caps: normal; line-height: normal; text-decoration: underline;">https://zhuanlan.zhihu.com/p/25825319?utm_medium=social&amp;utm_source=weibo</a></font>
+  </div>
+  <div>
+   <br />
+  </div>
+  <div>
+   <font style="font-size: 24px;"><span style="font-size: 24px; font-weight: bold;">联系我们</span></font>
+  </div>
+  <div>
+   <span style="font-size: 18px;">如果有应用使用问题，可以在应用中》设置》意见反馈进行反馈</span>
+  </div>
+  <div>
+   <span style="font-size: 18px;">如有其他问题，可以通过邮箱方式联系我们：ppdevfeeback@gmail.com</span>
+  </div>
+  <div>
+   <br />
+  </div>
+  <div>
+   <br />
+  </div>
+ </body>
 </html>
